crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_footnote_continuation_indent_stripped_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..113
  PARAGRAPH@0..21
    TEXT@0..1 "a"
    FOOTNOTE_REFERENCE@1..5
      FOOTNOTE_LABEL_START@1..3 "[^"
      FOOTNOTE_LABEL_ID@3..4 "1"
      FOOTNOTE_LABEL_END@4..5 "]"
    TEXT@5..6 " "
    FOOTNOTE_REFERENCE@6..10
      FOOTNOTE_LABEL_START@6..8 "[^"
      FOOTNOTE_LABEL_ID@8..9 "2"
      FOOTNOTE_LABEL_END@9..10 "]"
    TEXT@10..11 " "
    FOOTNOTE_REFERENCE@11..15
      FOOTNOTE_LABEL_START@11..13 "[^"
      FOOTNOTE_LABEL_ID@13..14 "3"
      FOOTNOTE_LABEL_END@14..15 "]"
    TEXT@15..16 " "
    FOOTNOTE_REFERENCE@16..20
      FOOTNOTE_LABEL_START@16..18 "[^"
      FOOTNOTE_LABEL_ID@18..19 "4"
      FOOTNOTE_LABEL_END@19..20 "]"
    NEWLINE@20..21 "\n"
  BLANK_LINE@21..22
    BLANK_LINE@21..22 "\n"
  FOOTNOTE_DEFINITION@22..44
    FOOTNOTE_LABEL_START@22..24 "[^"
    FOOTNOTE_LABEL_ID@24..25 "1"
    FOOTNOTE_LABEL_END@25..26 "]"
    FOOTNOTE_LABEL_COLON@26..27 ":"
    WHITESPACE@27..28 " "
    PARAGRAPH@28..44
      TEXT@28..29 "d"
      NEWLINE@29..30 "\n"
      LINE_PREFIX@30..34 "    "
      INLINE_CODE@34..43
        INLINE_CODE_MARKER@34..35 "`"
        INLINE_CODE_CONTENT@35..37 "x\n"
        LINE_PREFIX@37..41 "    "
        INLINE_CODE_CONTENT@41..42 "y"
        INLINE_CODE_MARKER@42..43 "`"
      NEWLINE@43..44 "\n"
  BLANK_LINE@44..45
    BLANK_LINE@44..45 "\n"
  FOOTNOTE_DEFINITION@45..71
    FOOTNOTE_LABEL_START@45..47 "[^"
    FOOTNOTE_LABEL_ID@47..48 "2"
    FOOTNOTE_LABEL_END@48..49 "]"
    FOOTNOTE_LABEL_COLON@49..50 ":"
    WHITESPACE@50..51 " "
    PARAGRAPH@51..71
      TEXT@51..52 "d"
      NEWLINE@52..53 "\n"
      LINE_PREFIX@53..57 "    "
      TEXT@57..59 "  "
      INLINE_CODE@59..70
        INLINE_CODE_MARKER@59..60 "`"
        INLINE_CODE_CONTENT@60..62 "x\n"
        LINE_PREFIX@62..66 "    "
        INLINE_CODE_CONTENT@66..69 "  y"
        INLINE_CODE_MARKER@69..70 "`"
      NEWLINE@70..71 "\n"
  BLANK_LINE@71..72
    BLANK_LINE@71..72 "\n"
  FOOTNOTE_DEFINITION@72..95
    FOOTNOTE_LABEL_START@72..74 "[^"
    FOOTNOTE_LABEL_ID@74..75 "3"
    FOOTNOTE_LABEL_END@75..76 "]"
    FOOTNOTE_LABEL_COLON@76..77 ":"
    WHITESPACE@77..78 " "
    PARAGRAPH@78..80
      TEXT@78..79 "d"
      NEWLINE@79..80 "\n"
    BLANK_LINE@80..81
      BLANK_LINE@80..81 "\n"
    PARAGRAPH@81..95
      LINE_PREFIX@81..85 "    "
      INLINE_MATH@85..94
        INLINE_MATH_MARKER@85..86 "$"
        MATH_CONTENT@86..93
          MATH_WORD@86..87 "m"
          MATH_NEWLINE@87..88 "\n"
          LINE_PREFIX@88..92 "    "
          MATH_WORD@92..93 "n"
        INLINE_MATH_MARKER@93..94 "$"
      NEWLINE@94..95 "\n"
  BLANK_LINE@95..96
    BLANK_LINE@95..96 "\n"
  FOOTNOTE_DEFINITION@96..113
    FOOTNOTE_LABEL_START@96..98 "[^"
    FOOTNOTE_LABEL_ID@98..99 "4"
    FOOTNOTE_LABEL_END@99..100 "]"
    FOOTNOTE_LABEL_COLON@100..101 ":"
    WHITESPACE@101..102 " "
    PARAGRAPH@102..113
      TEXT@102..103 "d"
      NEWLINE@103..104 "\n"
      INLINE_CODE@104..112
        INLINE_CODE_MARKER@104..105 "`"
        INLINE_CODE_CONTENT@105..111 "lazy\ny"
        INLINE_CODE_MARKER@111..112 "`"
      NEWLINE@112..113 "\n"
